# my-pi-skills

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
forma-help-center/: SKILL.md
forma-website-browsing/: SKILL.md
fsa-dcfsa-claims-automation/: SKILL.md  TODO.md
fsa-dcfsa-claims-automation/scripts/: consts.ts  ingest-transaction-cli.ts  ingest-transaction-core.ts  ingest-transaction-core.unit.test.ts  models.ts  models.unit.test.ts  package.json  score-transactions.ts  tsconfig.json
mongodb-local/: CHEATSHEET.md  README.md  SKILL.md
ollama-local/: README.md  SKILL.md  health-check.sh  test-embedding-batch.js  test-embedding-similarity.js  test-embedding.js
pdf-to-png/: BUILD.bazel  SKILL.md  pdf-to-png.test.ts  tsconfig.json
pdf-to-png/testdata/: BUILD.bazel  README.md
pdf-to-text/: SKILL.md
qdrant-local/: INSTALLATION.md  README.md  SKILL.md  qdrant-collections.js  qdrant-health.js  qdrant-search.js  qdrant-test.js  qdrant-upsert.js
stacked-git-workflow/: SKILL.md
vector-ingest/: SKILL.md
vector-search/: SKILL.md
vector-search/scripts/: package.json  qdrant-cli  qdrant-cli.ts
