load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

# Workspace-wide TypeScript config. Leaf packages reference this via:
#   ts_config(name = "tsconfig", src = "tsconfig.json", deps = ["//:tsconfig"])
ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)
